--- a/index.html
+++ b/index.html
@@ -65,6 +65,201 @@
         <img class="hero-background" src="public/imgs/product-header-bg.jpg" />
     </section>
 
+    <!-- Products -->
+    <section class="product container">
+        <h2>- Feature Products -</h2>
+        <div class="product-list">
+            <div class="card">
+                <img src="public/imgs/product1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="card-title-wrapper">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-price">$99</p>
+                    </div>
+                    <p class="card-text">
+                        <span>
+                            Some quick example text to build on the card title and make up the bulk of the
+                            card's content.
+                        </span>
+                        <button class="more">less</button>
+                    </p>
+                    <div class="card-body-bottom">
+                        <div class="stars">
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                        </div>
+                        <button class="btn-buy">
+                            <i class="icon-cart"></i>
+                            Buy now
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="public/imgs/product1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="card-title-wrapper">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-price">$99</p>
+                    </div>
+                    <p class="card-text">
+                        <span>
+                            Some quick example text to build on the card title and make up the bulk of the
+                            card's content.
+                        </span>
+                        <button class="more">less</button>
+                    </p>
+                    <div class="card-body-bottom">
+                        <div class="stars">
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                        </div>
+                        <button class="btn-buy">
+                            <i class="icon-cart"></i>
+                            Buy now
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="public/imgs/product1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="card-title-wrapper">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-price">$99</p>
+                    </div>
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the bulk of the
+                        card's content.
+                    </p>
+                    <div class="card-body-bottom">
+                        <div class="stars">
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                        </div>
+                        <button class="btn-buy">
+                            <i class="icon-cart"></i>
+                            Buy now
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="public/imgs/product1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="card-title-wrapper">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-price">$99</p>
+                    </div>
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the bulk of the
+                        card's content.
+                    </p>
+                    <div class="card-body-bottom">
+                        <div class="stars">
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                        </div>
+                        <button class="btn-buy">
+                            <i class="icon-cart"></i>
+                            Buy now
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="public/imgs/product1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="card-title-wrapper">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-price">$99</p>
+                    </div>
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the bulk of the
+                        card's content.
+                    </p>
+                    <div class="card-body-bottom">
+                        <div class="stars">
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                        </div>
+                        <button class="btn-buy">
+                            <i class="icon-cart"></i>
+                            Buy now
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="public/imgs/product1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="card-title-wrapper">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-price">$99</p>
+                    </div>
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the bulk of the
+                        card's content.
+                    </p>
+                    <div class="card-body-bottom">
+                        <div class="stars">
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                        </div>
+                        <button class="btn-buy">
+                            <i class="icon-cart"></i>
+                            Buy now
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="public/imgs/product1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="card-title-wrapper">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-price">$99</p>
+                    </div>
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the bulk of the
+                        card's content.
+                    </p>
+                    <div class="card-body-bottom">
+                        <div class="stars">
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                            <i class="fa-star"></i>
+                        </div>
+                        <button class="btn-buy">
+                            <i class="icon-cart"></i>
+                            Buy now
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script type="module" src="src/js/main.js"></script>
 </body>
 
