--- a/index.html
+++ b/index.html
@@ -260,6 +260,34 @@
         </div>
     </section>
 
+    <footer>
+        <img src="public/imgs/angle-up-light.svg">
+        <div class="container">
+            <div class="footer-container">
+                <p class="created-by">
+                    NgoDai © 2021
+                </p>
+
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Shop</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
+    <button class="back-to-top">Back to top</button>
+
     <script type="module" src="src/js/main.js"></script>
 </body>
 
