--- a/index.html
+++ b/index.html
@@ -21,6 +21,33 @@
     <header class="header">
         <h1>CyberPhone</h1>
 
+        <!-- Menu Small -->
+        <button class="btn-menu">
+            <i class="icon-menu"></i>
+        </button>
+
+        <div class="small-menu">
+            <button class="close">X</button>
+            <ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link__active" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Shop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Menu tablet -->
         <nav class="navigation">
             <ul>
                 <li class="nav-item">
